<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructiontext"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rockButtonText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paperButtonText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/scissorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scissorButtonText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/playerWText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlayerWText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompWText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompWText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/winnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winnerText"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>